# argutil

./: .coveragerc  .coveralls.yml  .flake8  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  README.rst  requirements.txt  setup.cfg  setup.py
argutil/: __init__.py  argutil.py  commandline.schema  deepcopy.py  defaults.py  primitives.py  template.py  working_directory.py
examples/: commandline.json  defaults.json  simple.py  submodules.py  templates.py
tests/: deepcopy_test.py  defaults_file_test.py  definitions_file_test.py  dummy_test.py  get_parser_test.py  helper.py  module_creation_test.py  submodules_test.py  template_test.py  working_directory_test.py
