[metadata]
name = argutil
version = attr: argutil.VERSION
description = Wrapper for argparse that uses JSON config files to define command line parsers
long_description = file: README.rst, LICENSE.rst
author = cmccandless
keywords = commandline, json
license = file: LICENSE
url = http://github.com/cmccandless/argutil

[options]
packages = argutil, tests
