[metadata]
name = argutil
version = 1.1.6
description = Wrapper for argparse that uses JSON config files to define command line parsers
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
author = cmccandless
keywords = commandline, json
license = file: LICENSE
url = http://github.com/cmccandless/argutil

[options]
packages = argutil, tests
include_package_data = True
install_requires = jsonschema==2.6.0
