[metadata]
name = argutil
version = 1.1.9
description = Wrapper for argparse that uses JSON config files to define command line parsers
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
author = cmccandless
keywords = commandline, json
license = MIT
url = http://github.com/cmccandless/argutil

[options]
packages = argutil, tests
include_package_data = True
install_requires = jsonschema==3.0.2
